--- a/work/index.html
+++ b/work/index.html
@@ -13,7 +13,7 @@
 <body>
   <section class="wrapper">
     <div class="inner">
-      <h1 class="page__title">フォームの作成</h1>
+      <h1 class="page__title">フォーム作成</h1>
       <div class="form__wrap">
         <form action="">
           <h2 class="form__title">アカウント作成</h2>
@@ -35,7 +35,7 @@
               <label class="label__text">生年月日
                 <span class="required">※</span>
               </label>
-              <div class="select__area  is__flex">
+              <div class="select__area is__flex">
                 <div class="select__unit">
                   <select class="input__area" name="year">
                     <option value="" disabled selected>年</option>
@@ -54,7 +54,7 @@
                 </div>
                 <div class="select__unit">
                   <select class="input__area" name="month">
-                    <option value="" desabled selected>月</option>
+                    <option value="" disabled selected>月</option>
                     <option value="">1</option>
                     <option value="">2</option>
                     <option value="">3</option>
@@ -128,7 +128,7 @@
               </label>
               <input class="input__area" id="account__name" type="text" required>
             </div>
-            <label class="label__section"></label>
+            <div class="label__section">
               <label class="label__text" for="email">メールアドレス
                 <span class="required">※</span>
               </label>
@@ -175,14 +175,13 @@
           </div>
           <div class="submit__content">
             <button class="btn btn__submit" type="submit">アカウント作成</button>
-            <p class="other-text">アカウントを作成することにより、<a class="link-color" href="#">利用目的</a>と<a class="link-color"
+            <p class="other-text">アカウントを作成することにより、<a class="link-color" href="#">利用規約</a>と<a class="link-color"
                 href="#">プライバシーポリシー</a>に同意するものとします。
             </p>
           </div>
         </form>
       </div>
     </div>
-
   </section>
 
 </body>
