--- a/work/index.html
+++ b/work/index.html
@@ -166,16 +166,16 @@
             <h3 class="forth__title">購読情報</h3>
             <div class="label__section subscription__unit">
               <input type="checkbox" name="subscription" value="email-magazine" id="email__magazine">
-              <label class="label__word subscription__label" for="email__magazine">メールマガジン</label>
+              <label class="label__text subscription__label" for="email__magazine">メールマガジン</label>
             </div>
             <div class="label__section subscription__unit">
               <input class="subscription__checkbox" type="checkbox" name="subscription" value="coupon" id="coupon">
-              <label class="label__word subscription__label" for="coupon">クーポン</label>
+              <label class="label__text subscription__label" for="coupon">クーポン</label>
             </div>
           </div>
           <div class="submit__content">
             <button class="btn btn__submit" type="submit">アカウント作成</button>
-            <p class="other-word">アカウントを作成することにより、<a class="link-color" href="#">利用規約</a>と<a class="link-color"
+            <p class="other-text">アカウントを作成することにより、<a class="link-color" href="#">利用規約</a>と<a class="link-color"
                 href="#">プライバシーポリシー</a>に同意するものとします。
             </p>
           </div>
