--- a/work/index.html
+++ b/work/index.html
@@ -14,11 +14,11 @@
   <section class="wrapper">
     <div class="inner">
       <h1 class="page__title">フォーム作成</h1>
-      <div class="outside">
+      <div class="form__wrap">
         <form action="">
           <h2 class="form__title">アカウント作成</h2>
           <div class="private__content">
-            <h3 class="first__title">個人情報</h3>
+            <h3 class="content__title">個人情報</h3>
             <div class="label__section">
               <label class="label__text" for="family__name">名字
                 <span class="required">※</span>
@@ -121,7 +121,7 @@
             </div>
           </div>
           <div class="account__content">
-            <h3 class="second__title">アカウント情報</h3>
+            <h3 class="content__title">アカウント情報</h3>
             <div class="label__section">
               <label class="label__text" for="account__name">アカウント名
                 <span class="required">※</span>
@@ -147,8 +147,8 @@
               <input class="input__area" id="duplication__password" type="password" required>
             </div>
           </div>
-          <div class="residence__content">
-            <h3 class="third__title">連絡先</h3>
+          <div class="contact__content">
+            <h3 class="content__title">連絡先</h3>
             <div class="label__section">
               <label class="label__text" for="address">住所
                 <span class="required">※</span>
@@ -163,7 +163,7 @@
             </div>
           </div>
           <div class="subscription__content">
-            <h3 class="forth__title">購読情報</h3>
+            <h3 class="content__title">購読情報</h3>
             <div class="label__section subscription__unit">
               <input type="checkbox" name="subscription" value="email-magazine" id="email__magazine">
               <label class="label__text subscription__label" for="email__magazine">メールマガジン</label>
